tests/generics_type_value_prefix_bad.stderr
tests/generics_type_value_prefix_bad.hop:7:18: error: HOP2002: unknown identifier 'Vector'
