tests/generics_type_value_prefix_bad.hop
struct Vector[T] {
	x T
}

fn main() {
	v := Vector[i32]{ x: 1 }
	if typeof(v) == Vector[i32] {}
}
